--- a/src/partials/catalog2.html
+++ b/src/partials/catalog2.html
@@ -21,7 +21,7 @@
                         </div>
                         <p class="card__price">11 000 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-6-item-1" data-src="#catalog-6-item-1" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
